--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,22 +1,22 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: alxuy # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Les Gîtes de Keregal
+    url: https://www.gites-keregal.com/
+  - name: Karat
+    url: https://karat-bijouterie.fr
+  - name: La gerbe d'or
+    url: https://lagerbedor92.fr/
+  - name: Amelie's workshop
+    url: https://ameliesworkshop.fr/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  # cname: demo.upptime.js.org
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
